--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.env
+/server
+tailwind.config.js
+src/components/WebPlayback.jsx
+src/setipProxy.js
