--- a/package.json
+++ b/package.json
@@ -44,5 +44,6 @@
   "devDependencies": {
     "request": "^2.88.2",
     "tailwindcss": "^3.3.6"
-  }
+  },
+  "proxy": "https://jammmingapi.onrender.com"
 }
